    * "get hero stat cap", "set capped hero stat"
    * "load menu"
    * "set [days/hours/minutes/seconds] of play", "get seconds of play" [Mike
      Caron]
    * "npc extra", "set npc extra" [Mike Caron]
    * "keyval"
    * "load sound", "free sound", "play sound", "stop sound", "pause sound"
      [Mike Caron]
    * "search string", "trim string"[Yuriy]
    * An existing command we forgot to mention in the whatsnew: "string compare"

  * Stuff only Developers Will Notice
    * Some rewritten map wrapping code [Ralph Versteegen]
    * Reformatted NPC data with UDTs [Mike Caron]

Mar 15 2006 [tirgoviste]
  * New Features
    * Stat caps [Mike Caron]
    * "% based attacks damage instead of set" attack bitset [Mike Caron]
    * Precise weapon placement. (use . and , to choose which
      frame to edit) [Mike Caron]
    * NPC Placement Editor now shows the copy number of NPCs (the bottom
      number) [Mike Caron]

  * Bug Fixes
    * Pausing the music will probably cause "stuck notes" (i.e. notes that never
      get turned off) if any notes are playing at the time [Mike Caron]
    * Browsing for a replacement song, and cancelling deleted the existing song.
      [Mike Caron]
    * Rewards in battle are rewarded multiple times. [Mike Caron]
    * Linux: specifying a file on the command line now works even if the file
      is in a different directory. [James Paige]
    * Windows: bug 140 keyboard handling quirks [Simon Bradley, James Paige]
    * music_native now supports volume [Mike Caron]
    * fixed bug 143 and bug 150 which disabled some spells you should have
      been able to use, and permitted usage of some spells that should have
      been disabled [James Paige]
    * fixed bug 151 which was causing shops in non-upgraded RPG files to
      expect random trade-in items for all purchases [James Paige]
    * fixed bug that prevented the name of a spell learned from an item from
      being displayed [James Paige]

  * New Plotscripting Commands